# Sir-Govan-Discord

./: .env.example  .gitignore  Cargo.toml  README.md  bot.js  commands.js  defines.js  listeners.js  package-lock.json  package.json  tsconfig.json  utils.js
.github/workflows/: build-node.yml  build-rust.yml  check-rust.yml
data/: double_check.py  servers.toml.example
data/db/: 0000-create.sql  create.sh
docker/: Dockerfile
executable/: Cargo.toml
html/: titlecard.hbs  tweet.hbs
lib/: Cargo.toml
lib/src/: args.rs  bot.rs  commands.rs  data.rs  event_handler.rs  functionality.rs  handlers.rs  helpers.rs  lib.rs  other_utils.rs  prelude.rs  util.rs
lib/src/bot/: commands.rs  data.rs  fake_iasip.rs  fake_twitter.rs  functionality.rs  halls.rs  helpers.rs  no_context.rs  periodic.rs  randomize_self.rs  shutdown.rs
lib/src/bot/commands/: color.rs  commander.rs  quit.rs
lib/src/bot/data/: emoji.rs  servers.rs
lib/src/bot/functionality/: fake_twitter.rs  halls.rs  no_context.rs  react_locks.rs  shutdown.rs  text_banners.rs
lib/src/bot/handlers/: on_message.rs  on_reaction_add.rs  on_ready.rs
lib/src/bot/helpers/: handlebars.rs  screenshotter.rs  text_banners.rs
lib/src/commands/: color.rs  commander.rs  icon.rs  ping.rs  quit.rs  refresh.rs  role.rs  roll.rs
lib/src/data/: config.rs  emoji.rs  regex.rs  servers.rs  strings.rs
lib/src/functionality/: fake_iasip.rs  fake_twitter.rs  halls.rs  no_context.rs  periodic.rs
lib/src/handlers/: on_message.rs  on_reaction_add.rs  on_ready.rs
lib/src/helpers/: discord_content_conversion.rs  handlebars.rs  react_locks.rs  screenshotter.rs  text_banners.rs
lib/src/other_utils/: tournaments.rs
lib/src/util/: error.rs  logger.rs  random.rs  traits.rs
lib/src/util/random/: grab_bag.rs
macros/: Cargo.toml
macros/src/: lib.rs
res/: double_check.py  strings.example.toml
res/html/: tweet.hbs
scripts/: build-container.sh  build-rpi-debug.sh  build-rpi-release.sh
src/: bot.rs  bot.ts  commands.ts  db.ts  db_wrapper.ts  defines.ts  listeners.ts  main.rs  main.ts  puzzler.ts  secrets.d.ts  secrets.template.ts  text.d.ts  text.template.ts  twitter.ts  util.rs  utils.ts
src/bot/: bot.rs  bot.ts  bot_user.ts  commands.ts  data.rs  functionality.rs  images.ts  listeners.ts  mod.rs  puzzler.ts  screenshots.ts  titlecard.ts  twitter.ts
src/bot/commands/: color.rs  commander.rs  mod.rs
src/bot/functionality/: halls.rs  mod.rs
src/bot/handlers/: mod.rs  on_message.rs  on_reaction_add.rs  on_ready.rs
src/data/: db.ts  db_wrapper.ts  persist.ts
src/lib/bot/commands/: color.rs  commander.rs
src/secrets/: old.example.ts  secrets.d.ts  text.d.ts
src/util/: logging.rs
test/: clues.ts
utils/: tournament.ts
