[package]
name = "sirgovan-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
colored = "2.0.4"
chrono = "0.4.26"
once_cell = "1.18.0"

[dependencies.tokio]
version = "1.29.1"
features = ["macros", "signal", "rt-multi-thread"] 

[dependencies.serenity]
version = "0.11.6"
default-features = false
features = ["cache", "client", "gateway", "model", "utils", "rustls_backend"]
