[package]
name = "sirgovan-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
colored = "2.0.4"
chrono = "0.4.26"
once_cell = "1.18.0"
toml = "0.7.6"
serde = "1.0.177"
rand = "0.8.5"

[dependencies.tokio]
version = "1.29.1"
features = ["macros", "signal", "rt-multi-thread"] 

[dependencies.serenity]
version = "0.11.6"
default-features = false
features = ["cache", "client", "gateway", "model", "http", "utils", "rustls_backend"]

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
opt-level = 3
strip = true
lto = true
panic = "abort"
