[package]
name = "sirgovan-lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "sirgovan"
path = "src/lib.rs"

[dependencies]
sirgovan-macros = { version = "*", path = "../macros" }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
colored = "2.0.4"
chrono = "0.4.26"
once_cell = "1.18.0"
toml = "0.7.6"
serde = "1.0.177"
rand = "0.8.5"
num-bigint = { version = "0.4.3", features = ["rand", "serde"] }
regex = "1.9.1"
num-rational = "0.4.1"
skia-safe = { version = "0.64.0" }
lazy_static = "1.4.0"
reqwest = "0.11.18"
image = "0.24.7"
futures = "0.3.28"
headless_chrome = "1.0.5"
handlebars = "4.3.7"
tungstenite = "0.20.0"
anyhow = "1.0.75"
thiserror = "1.0.47"
itertools = "0.11.0"
async-trait = "0.1.73"

[dependencies.openssl]
version = "*"
features = ["vendored"]

[dependencies.tokio]
version = "1.29.1"
features = ["macros", "signal", "rt-multi-thread"] 

[dependencies.serenity]
version = "0.11.6"
default-features = false
features = ["cache", "client", "gateway", "model", "http", "utils", "rustls_backend"]
